// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStringInObject should uppercase all strings values in a matrix: a matrix 1`] = `
Array [
  Array [
    Array [
      Array [
        Array [
          Array [
            Array [
              "MATRIX",
            ],
          ],
        ],
        "CITRIX",
      ],
    ],
  ],
  "HELLO",
]
`;

exports[`mapStringInObject should uppercase all strings values in an array: an array 1`] = `
Array [
  "HELLO",
  "WORLD",
]
`;

exports[`mapStringInObject should uppercase all strings values in an object: an object 1`] = `
Object {
  "count": 1,
  "nicole": "HEDGES",
}
`;

exports[`mapStringInObject should uppercase all strings values in nested strings in array and object: nested strings in array and object 1`] = `
Object {
  "array": Array [
    "HELLO",
    Object {
      "count": Object {
        "min": 2,
        "reason": "TEST",
      },
      "nicole": "HEDGES",
    },
    2,
  ],
  "key": "VALUE",
}
`;
